Fixed text overflow on item search page

--- a/src/app/items/items-page/items-page.component.css
+++ b/src/app/items/items-page/items-page.component.css
@@ -24,3 +24,9 @@ a {
     text-decoration: none;
     color: black;
 }
+
+mat-card-title {
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 100%;
+}
